<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="computomovil.fmat.lalo.abcconarchivosdeestudiantes.FormStudent">

    <EditText
        android:id="@+id/textMatrix"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:enabled="false"
        android:inputType="text"
        android:text="@string/txt_matrix"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textMatrix"
        android:layout_alignStart="@+id/textMatrix"
        android:layout_below="@+id/textMatrix"
        android:inputType="text"
        android:text="@string/txt_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textFirstLastName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textName"
        android:layout_alignStart="@+id/textName"
        android:layout_below="@+id/textName"
        android:inputType="text"
        android:text="@string/txt_firstLastName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textSecondLastName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textFirstLastName"
        android:layout_alignStart="@+id/textFirstLastName"
        android:layout_below="@+id/textFirstLastName"
        android:inputType="text"
        android:text="@string/txt_secondLastName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textMajor"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textSecondLastName"
        android:layout_alignStart="@+id/textSecondLastName"
        android:layout_below="@+id/textSecondLastName"
        android:inputType="text"
        android:text="@string/txt_major"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textMajor"
        android:layout_alignStart="@+id/textMajor"
        android:layout_below="@+id/textMajor"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/lbl_matrix"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textName"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:text="@string/lbl_student_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textSecondLastName"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:text="@string/lbl_firstLastName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textSecondLastName"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:text="@string/lbl_secondLastName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_centerVertical="true"
        android:text="@string/lbl_major"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textDate"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:text="@string/lbl_birthday"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_update"
        android:onClick="updateStudent"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginTop="62dp" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_delete"
        android:onClick="deleteStudent"
        android:layout_alignTop="@+id/btn_update"
        android:layout_alignLeft="@+id/textDate"
        android:layout_alignStart="@+id/textDate" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:id="@+id/btn_save"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btn_delete"
        android:layout_toStartOf="@+id/btn_delete"
        android:onClick="saveStudent" />
</RelativeLayout>
